--- a/login/style.css
+++ b/login/style.css
@@ -1,8 +1,9 @@
 .titulo{
+    font-weight: 400;
     font-size: 76;
     background: fixed;
     background-position: right;
-
+    margin-bottom: 16px;
 }
 
 .robo-image{
@@ -23,4 +24,26 @@
     flex-direction: column;/*muda o flex para coluna*/
     align-items: center;/*centralizar horizontamente*/
     justify-content: center;/*centralizar verticalmente*/ 
+}
+
+
+.inpt{
+    padding:18px;/* margin interna */
+    margin-bottom: 16px;
+    background-color: #f7f9fb;
+    width: 377px;
+    border: 1px solid #ccc;
+    border-radius: 12px;
+}
+.botao{
+    cursor: pointer;
+    padding: 20px;
+    margin-bottom: 16px;
+    background-color: #1c1c1c;
+    color: #fff;
+    border-radius: 12px;
+    width: 377px;
+    height: 56px;
+    border:none
+
 }
