--- a/login/style.css
+++ b/login/style.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 *{
-    padding: 0px;
-    margin: 0px;
+    margin:0px;
+    padding:0px;
     box-sizing: border-box;
-
+    font-family: "Inter";
 }
 
 
