--- a/chat/style.css
+++ b/chat/style.css
@@ -17,7 +17,7 @@ width: 20vw;
 display: flex;
 flex-direction: column;
 justify-content: space-between;
-background-color: blue;
+
 
 }
 
@@ -25,23 +25,56 @@ background-color: blue;
 .top{
     width: 100%;
     min-height: 200px;
-    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+   
+  
 }
 
 .top button{
     cursor: pointer;
-padding-left: 5px;
+    padding:8px 80px;
+    border-radius: 12px;
+    margin-bottom: 10px;
+    margin-top: 20px;
     background-color: #1c1c1c;
     color: #fff;
+    border:none
+    
+}
+
+.top p{
+    width: 100%;
+   margin-left:80px;
+    cursor: pointer;
     border-radius: 12px;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    font-size: 14px;
+  
 }
 
 .bottom{
     width: 100%;
     min-height: 200px;
+      display: flex;
+    flex-direction: column;
+    align-items:center;
+   
 
 }
 
+.bottom p{
+  width: 100%;
+   margin-left:80px;
+    cursor: pointer;
+    border-radius: 12px;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    font-size: 14px;
+
+}
 .central-panel{
     width: 80vw;
     height: 100vh;
@@ -54,14 +87,15 @@ padding-left: 5px;
     width: 42%;
     height: 15%;
     background-image: url(./img/Chat.png);
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
     justify-content: center;
 }
  
 
 
 .central{
-    margin-top: 10px;
+   
     margin-left:100px;
     margin-right: 100px;
     padding-right: 40px;
@@ -91,4 +125,17 @@ padding-left: 5px;
     text-align: left;
     width: fit-content;
     margin: 8px;
+}
+.pesquisa{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.pesquisa input{
+
+    margin-top: 30px;
+    margin-left: 80px;
+    width: 800px;
+    height: 40px;
+   
 }
