--- a/chat/style.css
+++ b/chat/style.css
@@ -1,168 +1,165 @@
-@import url('https://fonts.googleapis.com/css2?family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-*{
-    margin:0px;
-    padding:0px;
-    box-sizing: border-box;
-    font-family: "Inter";
-}
+.left-panel {
 
-.conteiner{
-    display: flex;
-
-}
-
-.left-panel{
-height: 100vh;
-width: 20vw;
-display: flex;
-flex-direction: column;
-justify-content: space-between;
-
-
-}
-
-
-.top{
-    width: 100%;
-    min-height: 200px;
-    display: flex;
-    flex-direction: column;
-    align-items:center;
-   
-  
-}
-
-.top button{
-    cursor: pointer;
-    padding:8px 80px;
-    border-radius: 12px;
-    margin-bottom: 10px;
-    margin-top: 20px;
-    background-color: #1c1c1c;
-    color: #fff;
-    border:none
-    
-}
-
-.top p{
-    width: 100%;
-   margin-left:80px;
-    cursor: pointer;
-    border-radius: 12px;
-    margin-bottom: 10px;
-    margin-top: 20px;
-    font-size: 14px;
-  
-}
-
-.bottom{
-    width: 100%;
-    min-height: 200px;
-      display: flex;
-    flex-direction: column;
-    align-items:center;
-   
-
-}
-
-.bottom p{
-  width: 100%;
-   margin-left:80px;
-    cursor: pointer;
-    border-radius: 12px;
-    margin-bottom: 10px;
-    margin-top: 20px;
-    font-size: 14px;
-
-}
-.central-panel{
-    width: 80vw;
     height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column
-    
-}
-.logo{
-    margin-top: 100px;
-    margin-right: 180px;
-    margin-left: 180px;
-    width: 42%;
-    height: 15%;
-    background-image: url(./img/Chat.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    justify-content: center;
-}
- 
+    width: 20vw;
+    border-right: 1px solid #ccc;
 
+}
 
-.central{
-   
-    margin-left:100px;
-    margin-right: 100px;
-    padding-right: 40px;
+.central-panel {
+
+    height: 100vh;
+    width: 80vw;
+
     display: flex;
-    justify-content:space-between;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 
 }
 
-.icon{ 
-    margin-top: 40px;
-    text-align: center;
-}
-
-.icon h1{
-    font-size: 18px;
-    margin-bottom: 20px;
-}
-
-.icon p{
-    display:inline-block;
-    padding:7px 14px;
-    font-size: 14px;
-    color: #1c1c1c;
-    background-color: #F7F9FB;
-    border: 1px#000000 solid;
-    border-radius: 8px;
-    text-align: left;
-    width: fit-content;
-    margin: 8px;
-}
-    .pesquisa {
-      position: relative;
-      margin: 20px;
-      margin-right: 80px;
-     
-    }
-
+.central-panel .logo {
     
-    .pesquisa input { 
-      margin-top:150px;
-      border-color: transparent;
-      border: 2px #000000 solid;
-      border-radius: 20px;
-      height: 20px;
-      width: 650px;
-      padding: 10px;
-      padding-left: 60px;
-      padding-right: 60px;
-      font-size: 16px;
-    }
+    margin-top: 20vh;
 
-    .pesquisa label {
-      margin-top: 150px;
-      position: absolute;
-      left: 60px;
-      color: #888;
-      transition: opacity 0.3s ease;
-      pointer-events: none;
-    }
+}
 
-    input:focus + label,
-    input:not(:placeholder-shown) + label {
-      opacity: 0;
-    }
+.central-panel .container {
+
+    display: flex;
+    max-width: 50vw;
+    margin-top: 20px;
+
+}
+
+.central-panel .item {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 20px;
+
+}
+
+.central-panel item h2 {
+
+    margin-bottom: 20px;
+
+    display: flex; /* Usa o modelo Flexbox para organizar os elementos */
+    flex-direction: column; /* Organiza os elementos em colunas */
+    align-items: center; /* Cetraliza horizontalmente */
+
+}
+
+.central-panel .item p {
+
+    margin-bottom: 10px;
+    padding: 10px;
+    background-color: #F7F9FB;
+    border-radius: 8px;
+
+}
+
+.container {
+
+    display: flex;
+
+}
+
+.top {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    height: 70vh;
+
+}
+
+.top .btn-new-chat {
+
+    width: 100%;
+    background-color: black;
+    padding: 10px;
+    color: white;
+    border: none;
+    border-radius: 12px;
+    margin-bottom: 10px;
+
+}
+
+.btn-chat {
+
+    width: 100%;
+    background-color: transparent;
+    padding: 10px;
+    color: black;
+    border: none;
+    border-radius: 12px;
+    margin-bottom: 10px;
+    text-align: left;
+
+    display: flex; /* Usa o modelo Flexbox para organizar os elementos */
+    flex-direction: row; /* Organiza os elementos em linhas */
+    align-items: center; /* Centraliza verticalmente */
+
+}
+
+.btn-chat img {
+
+    margin-right: 15px;
+
+}
+
+.bottom {
+
+    border-top: 1px solid #ccc;
+    padding: 20px;
+
+}
+
+.input-container-1 {
+
+    margin-top: auto;
+    margin-bottom: 40px;
+
+    display: flex;
+    align-items: center;
+
+    border: none;
+    background-color: #F7F9FB;
+
+    border-radius: 16px;
+
+    padding-left: 15px;
+    padding-right: 15px;
+
+}
+
+.input-container-1 input {
+
+    border: none;
+    padding: 20px;
+    background-color: transparent;
+    width: 40vw;
+
+}
+
+.input-container-2 {
+
+    margin-top: auto;
+    margin-bottom: 40px;
+
+}
+
+.input-container-2 input {
+
+    padding: 20px;
+    border: none;
+    background-color: #F7F9FB;
+    border-radius: 16px;
+    width: 40vw;
+
+}
 
 
