--- a/chat/style.css
+++ b/chat/style.css
@@ -8,7 +8,7 @@
 
 .central-panel {
 
-    height: 100vh;
+    height: 90vh;
     width: 80vw;
 
     display: flex;
@@ -43,7 +43,7 @@
 
 .central-panel item h2 {
 
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
 
     display: flex; /* Usa o modelo Flexbox para organizar os elementos */
     flex-direction: column; /* Organiza os elementos em colunas */
@@ -72,7 +72,7 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    height: 70vh;
+    height: 50vh;
 
 }
 
@@ -120,8 +120,8 @@
 
 .input-container-1 {
 
-    margin-top: auto;
-    margin-bottom: 40px;
+    margin-top:30px;
+    margin-bottom: 20px;
 
     display: flex;
     align-items: center;
